--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT = 5000
-MONGODB_URI = "mongodb://localhost:27017/LinkApp"
-JWT_ACCESS_SECRET = "jwt-secret-key"
-JWT_REFRESH_SECRET = "jwt-secret-key"
+MONGODB_URI = mongodb://localhost:27017/LinkApp
+JWT_ACCESS_SECRET = RiLhM82bH1gybCyUYZjy6mEmN4ZKCeOM
+JWT_REFRESH_SECRET = f85nWatX8ZlxbOnPgsgklfG5tIgIw2Xp
 SMPT_HOST = "smtp.mail.ru"
 SMTP_PORT = 465
 SMTP_USER = "linkapp@internet.ru"
